--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
-markdown: kramdown
+markdown: KramdownPygments
 kramdown:
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
   input: GFM
 permalink: /:title/
 url: http://charlesx.top
