--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ beian: 浙ICP备12026616号
 cnzz: 119959
 weibo: 5601918910
 github: charleshm
-highlighter: pygments
+pygments: true
 safe: true
 gems: [jekyll-paginate]
 paginate: 5
