--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-markdown: KramdownPygments
+markdown: Kramdown
 kramdown:
   auto_ids: true
   footnote_nr: 1
@@ -17,7 +17,7 @@ beian: 浙ICP备12026616号
 cnzz: 119959
 weibo: 5601918910
 github: charleshm
-pygments: true
+highlighter: pygments
 safe: true
 gems: [jekyll-paginate]
 paginate: 5
