--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
 markdown: Kramdown
 kramdown:
   input: GFM
+  extensions:
+    - autolink
+    - footnotes
+    - smart
+  enable_coderay: true
+  syntax_highlighter: rouge
+  coderay:
+    coderay_line_numbers:  nil
 permalink: /:title/
 url: http://charlesx.top
 name: Charles'Homepage
