--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: charles
 github_username:  charleshm
-# permalink: /:year/:month/:title/
+permalink: /:year/:month/:title/
 
 # Build settings
 markdown: kramdown
